--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.6.3",
+    "babel-preset-react-app": "^9.0.2",
+    "highcharts": "^7.2.0",
+    "highcharts-react-official": "^2.2.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
