--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "highcharts-react-official": "^2.2.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-year-picker": "^0.3.7"
   },
   "scripts": {
     "start": "react-scripts start",
